--- a/style.css
+++ b/style.css
@@ -69,3 +69,9 @@ img {
     width: 100px;
 }
 
+@media screen and (max-width: 1024px) and (min-height: 601px) {
+    .memory-game {
+        width: 90vw;
+        height: 120vw;
+    }
+}
